--- a/login.html
+++ b/login.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container col-4">
     	<h3> Login </h3>
-        <form class="form-control" onsubmit="return false;">
+        <form class="form-control">
             <input type="email" id="loginEmail" placeholder="Digite seu email" class="form-control"/>
             <br>
             <input type="password" id="loginSenha" placeholder="Digite sua senha" class="form-control"/>
             <br>
-            <button onclick="acessar()" class="btn btn-warning">ACESSAR</button>
+            <button onclick="acessar(); return false;" class="btn btn-warning">ACESSAR</button>
         </form>
     </div>
 </body>
